設定ファイルを若干変更

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
-    "watch": "esbuild app/javascript/*.* --watch --bundle --outdir=app/assets/builds --loader:.js=jsx"
+    "watch": "esbuild app/javascript/*.* --watch --bundle --outdir=app/assets/builds"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
