--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "app",
+  "name": "frontend",
   "private": true,
-  "devDependencies": {
-    "esbuild": "^0.23.0"
-  },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
     "watch": "esbuild app/javascript/*.* --watch --bundle --outdir=app/assets/builds"
   },
+  "devDependencies": {
+    "esbuild": "^0.23.0"
+  },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.5",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
