--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,3 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
+michael:
   email: michael@example.com
-
-two:
-  email: inactive@example.com
+  password_digest: <%= User.digest('password') %>
